--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -16,18 +16,18 @@
 
     <div>
       <div class="bg-gray-400 p-2 mb-4">
-        <%= form.label :title, "タイトル", class: "text-xl font-semibold block mb-1" %>
-        <%= form.text_field :title, class: "w-full h-10" %>
+        <%= form.label :title, 'タイトル', class: 'text-xl font-semibold block mb-1' %>
+        <%= form.text_field :title, class: 'w-full h-10' %>
       </div>
 
       <div class="bg-gray-400 p-2 mb-4">
-        <%= form.label :description, "説明", class: "text-xl font-semibold block mb-1" %>
-        <%= form.text_area :description, class: "w-full h-96" %>
+        <%= form.label :description, '説明', class: 'text-xl font-semibold block mb-1' %>
+        <%= form.text_area :description, class: 'w-full h-96' %>
       </div>
 
       <div class="bg-gray-400 flex justify-end gap-2">
-        <%= form.submit "作成", class: "bg-blue-500 text-white px-4 py-2" %>
-        <%= link_to "キャンセル", calendars_path, class: "bg-blue-500 text-white px-4 py-2" %>
+        <%= form.submit '作成', class: 'bg-blue-500 text-white px-4 py-2' %>
+        <%= link_to 'キャンセル', calendars_path, class: 'bg-blue-500 text-white px-4 py-2' %>
       </div>
     </div>
   <% end %>
