--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -16,12 +16,12 @@
 
     <div>
       <div class="bg-gray-400 p-2 mb-4">
-        <%= form.label :title, 'タイトル', class: 'text-xl font-semibold block mb-1' %>
+        <%= form.label :title, class: 'text-xl font-semibold block mb-1' %>
         <%= form.text_field :title, class: 'w-full h-10' %>
       </div>
 
       <div class="bg-gray-400 p-2 mb-4">
-        <%= form.label :description, '説明', class: 'text-xl font-semibold block mb-1' %>
+        <%= form.label :description, class: 'text-xl font-semibold block mb-1' %>
         <%= form.text_area :description, class: 'w-full h-96' %>
       </div>
 
