--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container mx-auto px-5 bg-gray-200">
+  <% if flash[:notice] %>
+    <div class="w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
+  <% end %>
   <div>
     <div class="bg-gray-400 p-2 mb-4">
       <h1 class="text-3xl font-bold"><%= @calendar.title %></h1>
