--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -10,5 +10,11 @@
     <div class="prose bg-white mx-auto max-w-full p-2">
         <%= markdown_to_html(@calendar.description).html_safe %>
     </div>
+
+    <div class="bg-gray-400">
+      <%= month_calendar(start_date: Date.new(2024, 12, 31)) do |date| %>
+          <%= date.day %>
+      <% end %>
+    </div>
   </div>
 </div>
