テストを作成

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="bg-gray-400">
-      <%= month_calendar(start_date: Date.new(2024, 12, 31)) do |date| %>
+      <%= month_calendar do |date| %>
           <%= date.day %>
       <% end %>
     </div>
