--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="prose bg-white mx-auto max-w-full p-2">
-        <%= markdown_to_html(@calendar.description).html_safe %>
+        <%= markdown_to_html(@calendar.description) %>
     </div>
 
     <div class="bg-gray-400">
