--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,18 +1,16 @@
-<div class="container mx-auto px-5 bg-gray-200">
-  <div>
-    <div class="bg-gray-400 p-2 mb-4">
-      <h1 class="text-3xl font-bold"><%= @calendar.title %></h1>
-    </div>
+<div class="container mx-auto px-5 bg-gray-200" data-controller="entry-modal">
+  <div class="bg-gray-400 p-2 mb-4">
+    <h1 class="text-3xl font-bold"><%= @calendar.title %></h1>
+  </div>
 
-    <div class="prose bg-white mx-auto max-w-full p-2">
-        <%= markdown_to_html(@calendar.description) %>
-    </div>
+  <div class="prose bg-white mx-auto max-w-full p-2">
+      <%= markdown_to_html(@calendar.description) %>
+  </div>
 
-    <div class="bg-gray-400">
-      <%= turbo_frame_tag 'entry_modal' %>
-      <%= month_calendar do |date| %>
-          <%= date.day %>
-      <% end %>
-    </div>
+  <div class="bg-gray-400">
+    <%= turbo_frame_tag 'entry_modal' %>
+    <%= month_calendar do |date| %>
+        <%= date.day %>
+    <% end %>
   </div>
 </div>
