--- a/app/views/entries/create.turbo_stream.erb
+++ b/app/views/entries/create.turbo_stream.erb
@@ -5,3 +5,7 @@
 <%= turbo_stream.update "flash-message" do %>
   <%= render "shared/flash" %>
 <% end %>
+
+<%= turbo_stream.update 'calendar' do %>
+  <%= render 'calendars/calendar', calendar: @calendar %>
+<% end %>
