--- a/app/views/entries/update_calendar.turbo_stream.erb
+++ b/app/views/entries/update_calendar.turbo_stream.erb
@@ -7,5 +7,5 @@
 <% end %>
 
 <%= turbo_stream.update 'calendar' do %>
-  <%= render 'calendars/calendar', calendar: @calendar %>
+  <%= render 'calendars/calendar', calendar: calendar %>
 <% end %>
