--- a/app/views/entries/_entry_modal.html.erb
+++ b/app/views/entries/_entry_modal.html.erb
@@ -32,6 +32,15 @@
           <%= form.submit '保存', class: 'bg-blue-500 text-white px-4 py-2' %>
           <%= button_tag 'キャンセル', type: 'button', data: { action: 'entry-modal#close' },
                                   class: 'bg-blue-500 text-white px-4 py-2' %>
+          <% if entry.id %>
+            <%= link_to '削除', entry_path(entry),
+                        data: {
+                          turbo_method: :delete,
+                          turbo_confirm: '削除しますか？',
+                          action: 'entry-modal#close'
+                        },
+                        class: 'bg-blue-500 text-white px-4 py-2' %>
+          <% end %>
         </div>
       </div>
     <% end %>
