--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,18 +1,18 @@
 <div class="bg-gray-100 p-2 my-2">
-  <div class="grid grid-cols-7 bg-white">
+  <div class="grid grid-cols-1 sm:grid-cols-7 bg-white">
     <% date_range.slice(0, 7).each do |day| %>
-      <div class="py-2 text-center font-semibold text-gray-600 border-b bg-gray-200">
+      <div class="py-2 text-center font-semibold text-gray-600 border-b bg-gray-200 max-sm:hidden">
         <%= t('date.abbr_day_names')[day.wday] %>
       </div>
     <% end %>
 
     <% start_weekday(@calendar.year).times do %>
-      <div class="aspect-square p-2 border border-gray-300 bg-gray-100"></div>
+      <div class="aspect-square p-2 border border-gray-300 bg-gray-100 max-sm:hidden"></div>
     <% end %>
 
     <% advent_dates(@calendar.year).each do |day| %>
       <div class="<%= class_names(
-                        'aspect-square p-2 border border-gray-300 flex justify-between',
+                        'aspect-[4/1] sm:aspect-square p-1 border border-gray-300 flex justify-between',
                         'bg-yellow-100' => day == Time.zone.today
                       ) %>">
         <% instance_exec(day, calendar.sorted_events_for(day), &passed_block) %>
