--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -7,13 +7,18 @@
       </div>
     </div>
 
-    <% if (entry = entries.find { |e| e.user == User.last }) %>
+    <% if (entry = entries.find { |e| e.user == current_user }) %>
       <%= link_to '編集', edit_entry_path(entry, registration_date: date),
                   class: 'absolute text-blue-500 top-1 right-1 text-base',
                   data: { turbo_frame: 'entry_modal' } %>
     <% else %>
       <%= link_to '+', new_calendar_entry_path(calendar, registration_date: date),
-                  class: 'absolute text-blue-500 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-2xl',
+                  class: class_names(
+                    'absolute text-blue-500', {
+                      'top-1 right-1 text-base' => calendar.entry_on?(date),
+                      'top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-2xl' => !calendar.entry_on?(date)
+                    }
+                  ),
                   data: { turbo_frame: 'entry_modal' } %>
     <% end %>
 
