--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto px-5 bg-gray-200">
   <div class="bg-gray-400 p-2 mb-4">
-    <h1 class="text-3xl font-bold">カレンダーを作成</h1>
+    <h1 class="text-3xl font-bold">カレンダーを編集</h1>
   </div>
 
   <%= render 'form', calendar: @calendar %>
