--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -23,6 +23,9 @@
       <div class="bg-gray-400 flex justify-end gap-2">
         <%= form.submit class: 'bg-blue-500 text-white px-4 py-2' %>
         <%= link_to 'キャンセル', calendar, class: 'bg-blue-500 text-white px-4 py-2' %>
+        <%= link_to '削除', calendar,
+                    data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' },
+                    class: 'bg-blue-500 text-white px-4 py-2' %>
       </div>
     </div>
   <% end %>
