--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -2,16 +2,19 @@
   <div class="relative w-full h-full">
     <div class="absolute top-1 left-1 text-sm text-gray-500 text-center">
       <%= date.day %>
-      <div class="sm:hidden">
+      <div class="<%= class_names(
+                        'sm:hidden',
+                        hidden: index_action?
+                      ) %>">
         <%= t('date.abbr_day_names')[date.wday] %>
       </div>
     </div>
 
-    <% if (entry = entries.find { |e| e.user == current_user }) %>
+    <% if !index_action? && (entry = entries.find { |e| e.user == current_user }) %>
       <%= link_to '編集', edit_entry_path(entry, registration_date: date),
                   class: 'absolute text-blue-500 top-1 right-1 text-base',
                   data: { turbo_frame: 'entry_modal' } %>
-    <% else %>
+    <% elsif !index_action? %>
       <%= link_to '+', new_calendar_entry_path(calendar, registration_date: date),
                   class: class_names(
                     'absolute text-blue-500', {
