--- a/app/views/entries/_entry_modal.html.erb
+++ b/app/views/entries/_entry_modal.html.erb
@@ -36,7 +36,7 @@
             <%= link_to '削除', entry_path(entry),
                         data: {
                           turbo_method: :delete,
-                          turbo_confirm: '削除しますか？',
+                          turbo_confirm: '記事を削除しますか？',
                           action: 'entry-modal#close'
                         },
                         class: 'bg-blue-500 text-white px-4 py-2' %>
