--- a/app/views/entries/_entries.html.erb
+++ b/app/views/entries/_entries.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= entries.first.registration_date %>" class="border border-gray-300 p-4 rounded-lg bg-white shadow-sm">
+<div id="entry_<%= entries.first.registration_date %>" class="border border-gray-300 p-4 rounded-lg bg-white shadow-sm">
   <% entries.reverse.each_with_index do |entry, index| %>
     <div class="p-4 flex gap-4 <%= 'border-t border-gray-200' unless index.zero? %>">
       <div class="text-gray-700 font-semibold w-6 text-left">
@@ -7,7 +7,7 @@
 
       <div class="flex-1 space-y-4">
         <div class="flex items-center space-x-2">
-          <%= image_tag "#{request.base_url}#{entry.user.avatar_url}", class: 'w-8 h-8 rounded-full' %>
+          <%= image_tag entry.user.avatar_url, class: 'w-8 h-8 rounded-full' %>
           <span class="text-sm font-semibold text-gray-900"><%= entry.user.name %></span>
         </div>
 
