二人登録している日を削除すると両方消えてしまうバグを修正

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -21,8 +21,8 @@
   </div>
 
   <div id="entries_list" class="space-y-2">
-    <% @calendar.entries.order(:registration_date).group_by(&:registration_date).each do |date, entries| %>
-      <%= render 'entries/entries', entries: entries %>
-    <% end %>
+    <%= render partial: 'entries/entries',
+               collection: @calendar.entries.order(:registration_date),
+               as: :entry %>
   </div>
 </div>
