--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -14,14 +14,15 @@
       </div>
     <% end %>
 
-    <% advent_dates(start_date.year).each do |day| %>
-      <div class="<%= class_names(
+    <% advent_dates(start_date.year).each do |date| %>
+      <div data-test="day-<%= date.day %>"
+           class="<%= class_names(
                         'p-1 border border-gray-300 flex justify-between',
                         { 'aspect-square' => index_action?,
                           'aspect-[4/1] sm:aspect-square' => !index_action?,
-                          'bg-yellow-100' => day == Time.zone.today }
+                          'bg-yellow-100' => date == Time.zone.today }
                       ) %>">
-        <% instance_exec(day, calendar.sorted_events_for(day), &passed_block) %>
+        <% instance_exec(date, calendar.sorted_events_for(date), &passed_block) %>
       </div>
     <% end %>
 
