--- a/app/views/entries/update.turbo_stream.erb
+++ b/app/views/entries/update.turbo_stream.erb
@@ -6,4 +6,4 @@
 
 <%= turbo_stream.update 'calendar', partial: "calendars/calendar", locals: { calendar: entry.calendar } %>
 
-<%= turbo_stream.replace "entry_#{entry.registration_date}", entry %>
+<%= turbo_stream.replace "entry_#{entry.id}", entry %>
