--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,4 @@
   <% if flash[:notice] %>
-    <div class="fixed top-5 right-5 w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
+    <div class="animate-fade-out-5s fixed top-5 right-5
+                w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
   <% end %>
