--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,6 +1,6 @@
 <div id="entry_<%= entry.id %>" class="border border-gray-300 p-4 rounded-lg bg-white shadow-sm">
   <div class="p-4 flex gap-4 ">
-    <div class="text-gray-700 font-semibold w-6 text-left">
+    <div data-copy-entries-target="day" class="text-gray-700 font-semibold w-6 text-left">
       <%= entry.registration_date.strftime('%-d') %>
     </div>
 
