ヘッダーを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+    <%= render 'shared/header' %>
+
     <div id="flash-message">
       <%= render 'shared/flash' %>
     </div>
