--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title>FjordCalendar</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -21,5 +21,7 @@
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
+
+    <%= render 'shared/footer' %>
   </body>
 </html>
