--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,11 +10,11 @@
 
         <ul data-dropdown-target="menu" class="hidden bg-white z-50 text-sm absolute right-0 mt-2 w-32 border rounded shadow p-2">
           <li><%= link_to 'マイページ', '#' %></li>
-          <li><%= link_to 'ログアウト', '#' %></li>
+          <li><%= button_to 'ログアウト', logout_path, method: :delete %></li>
         </ul>
       </div>
     <% else %>
-      <div class="text-lg font-bold">登録ボタン</div>
+      <%= button_to '登録する', '/auth/github', method: :post, data: { turbo: false } %>
     <% end %>
   </div>
 </header>
