--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -3,7 +3,7 @@
     <%= link_to '記事のリンクをコピー', '#',
                 class: 'bg-blue-800 text-white px-4 py-2',
                 data: { action: 'copy-entries#copy' } %>
-    <% if current_user.admin? %>
+    <% if user_signed_in? && current_user.admin? %>
       <%= link_to '編集', edit_calendar_path(@calendar), class: 'bg-blue-500 text-white px-4 py-2' %>
     <% end %>
   </div>
