--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,9 @@
-  <% if flash[:notice] %>
-    <div class="z-50 animate-fade-out-5s fixed top-5 right-5
-                w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
-  <% end %>
+<% if flash[:notice] %>
+  <div class="z-50 animate-fade-out-5s fixed top-5 right-5
+              w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
+<% end %>
+
+<% if flash[:alert] %>
+  <div class="z-50 animate-fade-out-5s fixed top-5 right-5
+              w-fit bg-red-100 border-2 border-red-500 text-red-700 p-2 m-2"><%= alert %></div>
+<% end %>
