テストを実装

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,9 +1,9 @@
 <% if flash[:notice] %>
-  <div class="z-50 animate-fade-out-5s fixed top-5 right-5
+  <div class="z-50 animate-fade-out absolute top-10 right-5
               w-fit bg-green-100 border-2 border-green-500 text-green-700 p-2 m-2"><%= notice %></div>
 <% end %>
 
 <% if flash[:alert] %>
-  <div class="z-50 animate-fade-out-5s fixed top-5 right-5
+  <div class="z-50 animate-fade-out fixed top-10 right-5
               w-fit bg-red-100 border-2 border-red-500 text-red-700 p-2 m-2"><%= alert %></div>
 <% end %>
