--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
     <% if current_user %>
       <div data-controller="dropdown" class="relative">
         <button data-action="click->dropdown#toggle">
-          <%= image_tag current_user.avatar_url, class: 'h-10 w-10 rounded-full object-cover' %>
+          <%= image_tag current_user.avatar_url, class: 'h-10 w-10 rounded-full object-cover', alt: 'プロフィール画像' %>
         </button>
 
         <ul data-dropdown-target="menu" class="hidden bg-white z-50 text-sm absolute right-0 mt-2 w-32 border rounded shadow p-2">
