フラッシュメッセージをキャッシュしないように変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body class="min-h-screen flex flex-col">
     <%= render 'shared/header' %>
 
-    <div id="flash-message">
+    <div id="flash-message" data-turbo-temporary>
       <%= render 'shared/flash' %>
     </div>
 
