--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <% if !index_action? && (entry = entries.find { |e| e.user == current_user }) %>
-      <%= link_to '編集', edit_entry_path(entry, registration_date: date),
+      <%= link_to '編集', edit_entry_path(entry),
                   class: 'absolute text-blue-500 top-1 right-1 text-base',
                   data: { turbo_frame: 'entry_modal' } %>
     <% elsif !index_action? && signed_in? && entries.size < calendar.max_entries %>
