--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -30,13 +30,14 @@
       <% entries.each do |entry| %>
         <% if controller.action_name == "index" %>
           <div class="w-full h-full flex items-end">
-            <%= image_tag(entry.user.avatar_url, class: 'rounded-full mx-auto max-h-[70%]') %>
+            <%= image_tag(entry.user.avatar_url, class: 'rounded-full mx-auto max-h-[70%]', alt: 'プロフィール画像') %>
           </div>
         <% else %>
           <%= link_to entry.url, class: 'w-full h-full flex items-end' do %>
             <%= image_tag(entry.user.avatar_url,
                           class: class_names('rounded-full mx-auto max-h-[70%]',
-                                             'pointer-events-none opacity-50' => entry.url.blank?)) %>
+                                             'pointer-events-none opacity-50' => entry.url.blank?),
+                          alt: 'プロフィール画像') %>
           <% end %>
         <% end %>
       <% end %>
