--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,11 +11,9 @@
         </button>
 
         <ul data-dropdown-target="menu" class="hidden bg-white z-50 text-sm absolute right-0 mt-2 w-32 border rounded shadow p-2">
-          <li><%= link_to 'マイページ', user_path(current_user) %></li>
+          <li><%= link_to 'マイページ', user_path(current_user) if signed_in? %></li>
           <li><%= button_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-          <% if current_user&.admin? %>
-            <li><%= link_to 'カレンダーを作成', new_calendar_path %></li>
-          <% end %>
+          <li><%= link_to 'カレンダーを作成', new_calendar_path if current_user&.admin? %></li>
         </ul>
       </div>
     <% else %>
