--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -1,7 +1,7 @@
 <%= month_calendar(start_date: calendar.start_date, events: calendar.entries.includes(:user),
                    attribute: :registration_date) do |date, entries| %>
   <div class="relative w-full h-full">
-    <div class="absolute top-1 left-1 text-sm text-gray-500 text-center">
+    <div class="absolute top-1 left-1 text-xs md:text-sm text-gray-500 text-center">
       <%= date.day %>
       <div class="<%= class_names(
                         'sm:hidden',
@@ -26,32 +26,33 @@
                   data: { turbo_frame: 'entry_modal', test: date.to_s } %>
     <% end %>
 
-    <div class="w-full h-full flex sm:flex-col items-center justify-center p-1">
+    <div class="w-full h-full flex justify-evenly sm:flex-col items-center p-1">
       <% entries.each do |entry| %>
         <% if controller.action_name == "index" %>
-          <div class="flex flex-col items-center">
+          <div class="h-full flex flex-col justify-center mt-4">
             <%= image_tag(entry.user.avatar_url,
                           class: class_names(
-                            'rounded-full w-10 h-10 object-cover',
-                            'lg:w-20 lg:h-20' => entries.size < 3,
-                            'md:w-8 md:h-8 lg:w-14 lg:h-14' => entries.size >= 3
+                            'rounded-full w-8 h-8 object-cover',
+                            'sm:w-12 sm:h-12' => entries.size == 1,
+                            'sm:w-12 sm:h-12 lg:w-15 lg:h-15' => entries.size == 2,
+                            'md:w-8 md:h-8 lg:w-10 lg:h-10' => entries.size >= 3
                           ),
                           alt: 'プロフィール画像') %>
           </div>
         <% else %>
-          <div class="flex flex-col items-center">
+          <div class="flex flex-col justify-evenly items-center mt-4">
             <%= link_to entry.url do %>
               <%= image_tag(entry.user.avatar_url,
                             class: class_names(
                               'rounded-full w-10 h-10 object-cover',
-                              'lg:w-20 lg:h-20' => entries.size < 3,
-                              'md:w-8 md:h-8 lg:w-14 lg:h-14' => entries.size >= 3,
+                              'lg:w-15 lg:h-15' => entries.size < 3,
+                              'md:w-8 md:h-8 lg:w-10 lg:h-10' => entries.size >= 3,
                               'pointer-events-none opacity-50' => entry.url.blank?
                             ),
                             alt: 'プロフィール画像') %>
             <% end %>
-            <div class="text-[10px] text-center">
-              <%= entry.user.name %>
+            <div class="text-xs text-center">
+              <%= entry.user.name if entries.size < 3 %>
             </div>
           </div>
         <% end %>
