--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-5 bg-gray-200">
+<div class="px-5 bg-gray-200">
   <div class="bg-gray-400 p-2 mb-4">
     <h1 class="text-3xl font-bold">カレンダーを編集</h1>
   </div>
