--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-2 bg-gray-200">
+<div class="px-2 bg-gray-200">
   <% @calendars.each do |calendar| %>
     <%= link_to calendar_path(calendar), data: { test: 'calendar', year: calendar.year } do %>
       <div class="mb-8 p-2 bg-white hover:bg-gray-500 transition cursor-pointer">
