--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,14 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="min-h-screen flex flex-col">
+  <body class="max-w-4xl mx-auto min-h-screen flex flex-col">
     <%= render 'shared/header' %>
 
     <div id="flash-message" data-turbo-temporary>
       <%= render 'shared/flash' %>
     </div>
 
-    <main class="container mx-auto mt-28 px-5 flex-1">
+    <main class="w-full mt-28 px-1 flex-1">
       <%= yield %>
     </main>
 
