--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="z-40 fixed top-0 bg-gray-300 w-full h-16">
-  <div class="h-full container mx-auto flex items-center justify-between px-5">
+<header class="max-w-4xl z-40 fixed top-0 bg-gray-300 w-full h-16">
+  <div class="h-full mx-auto flex items-center justify-between px-5">
     <div class="text-lg font-bold">
       <%= link_to 'LOGO', root_path %>
     </div>
