--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -8,7 +8,7 @@
       <div class="flex items-center space-x-2">
         <%= image_tag entry.user.avatar_url, class: 'w-8 h-8 rounded-full' %>
         <span data-copy-entries-target="name" class="text-sm font-semibold text-gray-900">
-          <%= link_to entry.user.name, user_path(entry.user) %>
+          <%= link_to entry.user.name, user_path(entry.user), data: { turbo: false } %>
         </span>
       </div>
 
