--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -1,3 +1,5 @@
+<% title 'カレンダーの新規作成' %>
+
 <div class="px-5 bg-gray-200">
   <div class="bg-gray-400 p-2 mb-4">
     <h1 class="text-3xl font-bold">カレンダーを作成</h1>
