--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,3 +1,5 @@
+<% title @calendar.title.to_s %>
+
 <div class="px-5 bg-gray-200" data-controller="entry-modal copy-entries">
   <div class="flex justify-end">
     <%= link_to '記事のリンクをコピー', '#',
