--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,3 +1,5 @@
+<% title 'カレンダーの編集' %>
+
 <div class="px-5 bg-gray-200">
   <div class="bg-gray-400 p-2 mb-4">
     <h1 class="text-3xl font-bold">カレンダーを編集</h1>
