--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@user.name}のマイページ" %>
+
 <div class="max-w-3xl mx-auto p-6">
   <div class="flex items-center space-x-4 mb-6">
     <%= image_tag @user.avatar_url, class: 'w-16 h-16 rounded-full object-cover' %>
